<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff"
        android:clickable="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/themes"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#ff5a5a"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/theme"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/researchreport"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#5affad"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/researchreports"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/conference"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#ffd900"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/conf"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/whatnew"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#6c87ff"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/whatisnew"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/countrylist"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#92b911"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/countrylist"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/execteam"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#5eff00"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/executive"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/venue"
            android:textAllCaps="false"
            android:textSize="23dp"
            android:background="#ef9610"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:id="@+id/venue"/>

    </LinearLayout>

</ScrollView>