<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="20dp"
        android:background="#ffff"
        android:clickable="true">


        <TextView
            android:id="@+id/headingcwriting"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#0c14ac"
            android:text="Clause Writing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/clauseformatting"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#111113"
            android:text="@string/clauseformatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clauseformattingtext"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:textColor="#111113"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />


        <Button
            android:id="@+id/learn_more0"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="Learn More..."
            android:textAllCaps="true"
            android:textColor="#0c14ac"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/goodclause"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#111113"
            android:text="@string/goodclause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/goodclausetext"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:textColor="#111113"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />


        <Button
            android:id="@+id/learn_more1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="Learn More..."
            android:textAllCaps="true"
            android:textColor="#0c14ac"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/listofocs"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#111113"
            android:text="@string/listopphrases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/listofocstext"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:textColor="#111113"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />


        <Button
            android:id="@+id/learn_more2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="Learn More..."
            android:textAllCaps="true"
            android:textColor="#0c14ac"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/previousresolutions"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#111113"
            android:text="@string/previousresolutions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/clickarchive"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="Click to access PAMUN archive"
            android:textAllCaps="true"
            android:textColor="#0c14ac"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />



    </LinearLayout>

</ScrollView>